--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGL.asm.loader.js";
+      var loaderUrl = buildUrl + "/Test.asm.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGL.data.gz",
-        frameworkUrl: buildUrl + "/WebGL.asm.framework.js.gz",
-        codeUrl: buildUrl + "/WebGL.asm.js.gz",
-        memoryUrl: buildUrl + "/WebGL.asm.mem.gz",
+        dataUrl: buildUrl + "/Test.data.gz",
+        frameworkUrl: buildUrl + "/Test.asm.framework.js.gz",
+        codeUrl: buildUrl + "/Test.asm.js.gz",
+        memoryUrl: buildUrl + "/Test.asm.mem.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
