--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Test.asm.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Test.data.gz",
-        frameworkUrl: buildUrl + "/Test.asm.framework.js.gz",
-        codeUrl: buildUrl + "/Test.asm.js.gz",
-        memoryUrl: buildUrl + "/Test.asm.mem.gz",
+        dataUrl: buildUrl + "/Test.data.unityweb",
+        frameworkUrl: buildUrl + "/Test.asm.framework.js.unityweb",
+        codeUrl: buildUrl + "/Test.asm.js.unityweb",
+        memoryUrl: buildUrl + "/Test.asm.mem.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
